# nonebot_plugin_gemini2

./: LICENSE  pyproject.toml
nonebot_plugin_gemini2/: __init__.py  config.py
